# franka-interface

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  genindex.html  index.html  install.html  network.html  objects.inv  search.html  searchindex.js  support.html
catkin_ws/src/franka_ros_interface/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/franka_ros_interface/launch/: franka_gripper.launch  franka_ros_interface.launch
catkin_ws/src/franka_ros_interface/src/: execute_skill_action_server.cpp  execute_skill_action_server_node.cpp  franka_interface_status_publisher.cpp  franka_interface_status_publisher_node.cpp  get_current_franka_interface_status_server.cpp  get_current_franka_interface_status_server_node.cpp  get_current_robot_state_server.cpp  get_current_robot_state_server_node.cpp  robot_state_publisher.cpp  robot_state_publisher_node.cpp  run_loop_process_info_state_publisher.cpp  run_loop_process_info_state_publisher_node.cpp  shared_memory_handler.cpp
franka-interface/: CMakeLists.txt
franka-interface-common/: CMakeLists.txt
franka-interface-common/include/franka-interface-common/: SharedMemoryInfo.h  definitions.h  franka_interface_state_info.h  run_loop_process_info.h
franka-interface-common/src/: SharedMemoryInfo.cpp  franka_interface_state_info.cpp  run_loop_process_info.cpp
franka-interface/include/franka-interface/: duration.h  feedback_controller_factory.h  file_stream_logger.h  franka_gripper.h  franka_robot.h  robot_state_data.h  run_loop.h  run_loop_logger.h  run_loop_shared_memory_handler.h  save_robot_state_data_to_shared_memory_buffer.h  sensor_data.h  sensor_data_manager.h  skill_info_manager.h  termination_handler_factory.h  trajectory_generator_factory.h
franka-interface/include/franka-interface/feedback_controller/: cartesian_impedance_feedback_controller.h  ee_cartesian_impedance_feedback_controller.h  feedback_controller.h  force_axis_impedence_feedback_controller.h  force_position_feedback_controller.h  joint_impedance_feedback_controller.h  lqr_cartesian_feedback_controller.h  noop_feedback_controller.h  pass_through_feedback_controller.h  pass_through_joint_torque_feedback_controller.h  set_internal_impedance_feedback_controller.h  torque_feedback_controller.h
franka-interface/include/franka-interface/skills/: base_meta_skill.h  base_skill.h  cartesian_pose_skill.h  cartesian_velocity_skill.h  force_torque_skill.h  gripper_skill.h  impedance_control_skill.h  joint_position_continuous_skill.h  joint_position_dynamic_interp_skill.h  joint_position_skill.h  joint_torque_skill.h  joint_velocity_skill.h  lqr_control_skill.h
franka-interface/include/franka-interface/termination_handler/: contact_termination_handler.h  final_joint_termination_handler.h  final_pose_termination_handler.h  noop_termination_handler.h  termination_handler.h  time_termination_handler.h
franka-interface/include/franka-interface/trajectory_generator/: joint_trajectory_generator.h  (+31 more)
franka-interface/proto/: CMakeLists.txt  feedback_controller_params_msg.proto  robot_state_msg.proto  sensor_msg.proto  trajectory_generator_params_msg.proto
franka-interface/src/: duration.cpp  feedback_controller_factory.cpp  file_stream_logger.cpp  robot_state_data.cpp  run_loop.cpp  run_loop_logger.cpp  run_loop_shared_memory_handler.cpp  save_robot_state_data_to_shared_memory_buffer.cpp  sensor_data.cpp  sensor_data_manager.cpp  skill_info_manager.cpp  termination_handler_factory.cpp  trajectory_generator_factory.cpp
franka-interface/src/feedback_controller/: cartesian_impedance_feedback_controller.cpp  ee_cartesian_impedance_feedback_controller.cpp  feedback_controller.cpp  force_axis_impedence_feedback_controller.cpp  force_position_feedback_controller.cpp  joint_impedance_feedback_controller.cpp  lqr_cartesian_feedback_controller.cpp  noop_feedback_controller.cpp  pass_through_feedback_controller.cpp  pass_through_joint_torque_feedback_controller.cpp  set_internal_impedance_feedback_controller.cpp  torque_feedback_controller.cpp
franka-interface/src/skills/: base_meta_skill.cpp  base_skill.cpp  cartesian_pose_skill.cpp  cartesian_velocity_skill.cpp  force_torque_skill.cpp  gripper_skill.cpp  impedance_control_skill.cpp  joint_position_continuous_skill.cpp  joint_position_dynamic_interp_skill.cpp  joint_position_skill.cpp  joint_torque_skill.cpp  joint_velocity_skill.cpp  lqr_control_skill.cpp
franka-interface/src/termination_handler/: contact_termination_handler.cpp  final_joint_termination_handler.cpp  final_pose_termination_handler.cpp  noop_termination_handler.cpp  termination_handler.cpp  time_termination_handler.cpp
franka-interface/src/trajectory_generator/: cartesian_velocity_trajectory_generator.cpp  cubic_hermite_spline_joint_trajectory_generator.cpp  cubic_hermite_spline_pose_trajectory_generator.cpp  goal_pose_dmp_trajectory_generator.cpp  gripper_trajectory_generator.cpp  impulse_trajectory_generator.cpp  joint_dmp_trajectory_generator.cpp  joint_trajectory_generator.cpp  joint_velocity_trajectory_generator.cpp  linear_force_position_trajectory_generator.cpp  linear_joint_trajectory_generator.cpp  linear_pose_trajectory_generator.cpp  lqr_pose_trajectory_generator.cpp  min_jerk_joint_trajectory_generator.cpp  min_jerk_pose_trajectory_generator.cpp  pass_through_cartesian_velocity_trajectory_generator.cpp  pass_through_force_position_trajectory_generator.cpp  pass_through_joint_trajectory_generator.cpp  pass_through_joint_velocity_trajectory_generator.cpp  pass_through_pose_trajectory_generator.cpp  pose_dmp_trajectory_generator.cpp  pose_trajectory_generator.cpp  quaternion_pose_dmp_trajectory_generator.cpp  relative_linear_pose_trajectory_generator.cpp  relative_min_jerk_pose_trajectory_generator.cpp  relative_pose_trajectory_generator.cpp  sine_joint_trajectory_generator.cpp  sine_pose_trajectory_generator.cpp  stay_in_initial_joints_trajectory_generator.cpp  stay_in_initial_pose_trajectory_generator.cpp
franka-interface/src/utils/: logger_utils.cpp
ros2_ws/src/franka_ros_interface/: CMakeLists.txt  package.xml  plugins.xml
(+84 files in other folders)
